--- a/index.html
+++ b/index.html
@@ -278,29 +278,29 @@
             <div class="col">
                 <form>
                 <div class="row my-1">
-                <div class="col-4">
+                <div class="col-6">
                 <input type="text" class="form-control" placeholder="First Name" aria-label="First Name">
                 </div>
-                <div class="col-4">
+                <div class="col-6">
                 <input type="text" class="form-control" placeholder="Last Name" aria-label="Last Name">
                 </div>
                 </div>
                 <br>
                 <div class="row my-1">
-                <div class="col-8">
+                <div class="col-12">
                     <input type="email" class="form-control" placeholder="Email" aria-label="Email">
                 </div>
                 </div>
                 <br>
 
                 <div class="row my-1">
-                <div class="col-8">
+                <div class="col-12">
                     <input type="text" class="form-control" placeholder="Phone Number" aria-label="Phone Number">
                 </div>
                 </div>
                 <br>
                 <div class="row my-1">
-                    <div class="col-8">
+                    <div class="col-12">
                         <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="gridCheck">
                         <label class="form-check-label" for="gridCheck">
@@ -310,7 +310,11 @@
                         </div>
                         <br>
                         <br>
+                    <div class="row my-1 text-center">
+                    <div class="col-12">
                         <button type="submit" class="btn btn-primary col-6 text-center">Sign in</button>
+        </div>
+        </div>     
         </div>
         </div>
         </div>
@@ -321,7 +325,8 @@
 <br>
 <br>
 <br>
-<!-- Footer -->
+
+<!-- Footer Pt 1 -->
 <footer class="bg-dark text-light pt-5">
 <div class="container">
     <div class="row">
@@ -370,10 +375,12 @@
     </div>
 </div>
 </footer>
-<footer class="footer2">
+
+<!-- Footer Pt 2 -->
+
+<footer class="footer">
         <p class="text-center p-3 bg-body-secondary bg-black text-white">
-           Copyright &copy; 2020 - SLIIT Web Development - All rights reserved
-        </p>
+           Copyright &copy; 2020 - SLIIT Web Development - All rights reserved</p>
 </footer>
 
 
