--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
     .nav-item{
-        font-size: x-small;
+        font-size: small;
         margin-top: 5px;
         padding: 3px;
     }
@@ -119,7 +119,7 @@
 <img src="main-2.jpg" class="img-fluid" alt="banner-image">
 
 <!-- Top Destinations Section -->
- <section class="container-fluid p-3">
+ <section class="container-fluid my-4 p-2">
     <div class="row">
         <div class="col-md-12 text-center">
             <h1 class="display-6 fw-semibold">TOP DESTINATIONS</h1>
@@ -128,42 +128,44 @@
  </section>
 
 <!-- Destinations Section -->
-<section class="container-fluid p-5">
+<section class="container-fluid">
     <div class="row row-cols-md-5">
         <div class="col-12">
-            <h5 class="title text-center p-2">SRI LANKA</h4>
+            <h5 class="title text-center text-muted p-2">SRI LANKA</h4>
                 <img src="Sri Lanka.jpg" class="img-fluid" alt="srilanka">
         </div>
 
         <div class="col-12">
-            <h5 class="title text-center p-2">ROME</h5>
+            <h5 class="title text-center text-muted p-2">ROME</h5>
                 <img src="Rome.jpg" class="img-fluid" alt="rome">
         </div>
 
         <div class="col-12">
-            <h5 class="title text-center p-2">MALDIVES</h5>
+            <h5 class="title text-center text-muted p-2">MALDIVES</h5>
                 <img src="Maldives.jpg" class="img-fluid" alt="maldives">
         </div>
 
         <div class="col-12">
-            <h5 class="title text-center p-2">SWITZERLAND</h5>
+            <h5 class="title text-center text-muted p-2">SWITZERLAND</h5>
                 <img src="Switzerland.jpg" class="img-fluid" alt="switzerland">
         </div>
 
         <div class="col-12">
-            <h5 class="title text-center p-2">THAILAND</h5>
+            <h5 class="title text-center text-muted p-2">THAILAND</h5>
                 <img src="thailand2.jpg" class="img-fluid" alt="thailand">
         </div>
     </div>
 </section>
 
 <!-- Team Leads Section -->
-<section class="container-fluid p-1">
+<section class="container-fluid mt-5">
     <div class="row">
         <div class="col-md-12 text-center">
             <h1 class="display-6 fw-semibold">OUR TEAM LEADS</h1>
+            <div class="container d-flex justify-content-center">
             <div class="col-md-12 text-center">
-            <h5 class="p-2 fw-semibold m-5">Teamwork is the ability to work together toward a common vision. The ability to direct individual accomplishments toward organizational objectives. It is the fuel that allows common people to attain uncommon results.
+                <h5 class="p-2 fw-semibold">Teamwork is the ability to work together toward a common vision. The ability to direct individual accomplishments toward organizational objectives. It is the fuel that allows common people to attain uncommon results.
+</div>
 </div>
         </div>
     </div>
@@ -217,13 +219,13 @@
  <section class="container-fluid p-4">
     <div class="row">
         <div class="col-md-12 text-center">
-            <h1 class="display-6 fw-semibold">OVERHEAD FROM TRAVELERS</h1>
+            <h1 class="display-6 fw-semibold mt-4">OVERHEAD FROM TRAVELERS</h1>
         </div>
     </div>
  </section>
 
 <!-- Testimonials -->
-<section class="container my-5">
+<section class="container">
         <div class="row">
             <div class="col-md-4 p-2">
                 <div class="card" style="border-bottom-width: thick; border-bottom-color: cornflowerblue;">
@@ -264,7 +266,7 @@
     </section>
 
 <!-- Contact Us -->
- <section class="container-fluid p-4">
+ <section class="container-fluid p-4 mt-4">
     <div class="row">
         <div class="col-md-12 text-center">
             <h1 class="display-6 fw-semibold">CONTACT US</h1>
@@ -377,13 +379,10 @@
 </footer>
 
 <!-- Footer Pt 2 -->
-
-<footer class="footer">
+<footer class="footer2">
         <p class="text-center p-3 bg-body-secondary bg-black text-white">
            Copyright &copy; 2020 - SLIIT Web Development - All rights reserved</p>
 </footer>
-
-
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js" integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D" crossorigin="anonymous"></script>
