--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
 
     footer{
         font-size: small;
-        padding: 1px
+        padding: 1px;
+        vertical-align: top;
     }
 
     .icons {
         font-size: x-small;
     }
+
+
 
 </style>
 
@@ -376,13 +379,15 @@
             </div>        
     </div>
 </div>
+
 </footer>
 
 <!-- Footer Pt 2 -->
-<footer class="footer2">
-        <p class="text-center p-3 bg-body-secondary bg-black text-white">
+<footer class="footer">
+        <p class="text-center m-0 p-3 bg-body-secondary bg-black text-white">
            Copyright &copy; 2020 - SLIIT Web Development - All rights reserved</p>
-</footer>
+</div>
+        </footer> 
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.min.js" integrity="sha384-RuyvpeZCxMJCqVUGFI0Do1mQrods/hhxYlcVfGPOfQtPJh0JCw12tUAZ/Mv10S7D" crossorigin="anonymous"></script>
