--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         font-size: small;
         padding: 1px;
         vertical-align: top;
+        background-color:  rgb(17, 17, 63);
     }
 
     .icons {
